--- a/my-app/pages/components/Header/TopBar/TopBar.scss
+++ b/my-app/pages/components/Header/TopBar/TopBar.scss
@@ -1,7 +1,6 @@
 .top-bar{
     height: 90px;
-    background-color:$border-grey;   
-    
+    background-color:$background-dark;
     .ui.grid{
         margin: 0;
         padding: 0;
@@ -20,49 +19,51 @@
     &:hover{
         transform:translateX(-15px);
     }
-    }
-    }
+   }
+ }
 
-    &__rigth{
+    &__right{
         display: flex !important;
-        align-items:center;
-        justify-content:flex-end;
+        align-items: center;
+        justify-content: flex-end;
 
+        .ui.icon.input > input{
+            padding-right: 5px !important;
+           }
+     
     .ui.input {
      align-items: center;
      margin-right:25px;
     
-     .ui.icon.input{
-         padding-right: 5px !important;
-     }
+    
 
 
     input{
-     background-color: transparent;
+     background-color: transparent !important;
      border: 0;
-     border-bottom:2px solid $primary !important;
+     border-bottom: 2px solid $primary !important;
      border-radius: 0;
      color:$primary !important;
-     padding: 5px 0 !important;
-     width:220px;
-     font-size:20px;
+     padding: 5px 0 ;
+     width: 220px;
+     font-size: 20px;
      transition:width 0.7s;
-    
+
      &:focus{
-      width:350px;
-     }
+        width:350px;
+      }
+    }   
+  
+    i{
+        color:$primary;
+        opacity: 1 !important;
+        font-size:25 px;
+        right:-50px !important;
     }
-
-     i{
-         color:$primary;
-         opacity: 1 !important;
-         font-size:25 px;
-         right:-50px !important;
-     }
-
-    }
-    }
-
 }
+}    
+}
+  
+  
 
 
