Corrección del registro del login del usuario y otros componentes

--- a/my-app/pages/components/Account/ChangeEmailForm/ChangesEmailForm.scss
+++ b/my-app/pages/components/Account/ChangeEmailForm/ChangesEmailForm.scss
@@ -10,4 +10,11 @@ change-email-form  {
      }
     }
 
+    >form {
+        text-align:center;
+    >submit{
+        padding: 12px 60px;
+    }
+    }
+
 }
