--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -15,3 +15,4 @@
 @import "../pages/components/Auth/LoginForm/LoginForm.scss";
 @import "../pages/components/Account/ChangeNameForm/ChangeNameForm.scss";
 @import "../pages/components/Account/ChangeEmailForm/ChangesEmailForm.scss";
+@import "../pages/components/Account/ChangePasswordForm/ChangePasswordForm.scss";
