--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -16,3 +16,4 @@
 @import "../pages/components/Account/ChangeNameForm/ChangeNameForm.scss";
 @import "../pages/components/Account/ChangeEmailForm/ChangesEmailForm.scss";
 @import "../pages/components/Account/ChangePasswordForm/ChangePasswordForm.scss";
+@import "../pages/components/Account/AdressForm/AdressForm.scss";
