--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -6,6 +6,7 @@
 
 //Pages
 @import "../pages/account.scss";
+@import "../pages/index.scss";
 
 //components
 @import "../pages/components/Header/Header.scss";
@@ -18,3 +19,4 @@
 @import "../pages/components/Account/ChangePasswordForm/ChangePasswordForm.scss";
 @import "../pages/components/Account/AdressForm/AdressForm.scss";
 @import "../pages/components/Account/ListAddress/ListAddress.scss";
+@import "../pages/components/ListGames/ListGames.scss";
