--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -7,6 +7,7 @@
 //Pages
 @import "../pages/account.scss";
 @import "../pages/index.scss";
+@import "../pages/games/platform.scss";
 
 //components
 @import "../pages/components/Header/Header.scss";
@@ -20,3 +21,4 @@
 @import "../pages/components/Account/AdressForm/AdressForm.scss";
 @import "../pages/components/Account/ListAddress/ListAddress.scss";
 @import "../pages/components/ListGames/ListGames.scss";
+@import "../pages/components/Pagination/Pagination.scss";
