Primeros 5 videos del capitulo 12

--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -22,3 +22,5 @@
 @import "../pages/components/Account/ListAddress/ListAddress.scss";
 @import "../pages/components/ListGames/ListGames.scss";
 @import "../pages/components/Pagination/Pagination.scss";
+@import "../pages/components/Games/HeaderGame/HeaderGame.scss";
+@import "../pages/components/Games/TabsGame/TabsGame.scss";
