--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,6 +6,9 @@
 
 //Pages
 @import "../pages/account.scss";
+@import "../pages/index.scss";
+@import "../pages/games/platform.scss";
+@import "../pages/wishlist.scss";
 
 //components
 @import "../pages/components/Header/Header.scss";
@@ -14,3 +17,13 @@
 @import "../pages/components/Modal/BasicModal/BasicModal.scss";
 @import "../pages/components/Auth/LoginForm/LoginForm.scss";
 @import "../pages/components/Account/ChangeNameForm/ChangeNameForm.scss";
+@import "../pages/components/Account/ChangeEmailForm/ChangesEmailForm.scss";
+@import "../pages/components/Account/ChangePasswordForm/ChangePasswordForm.scss";
+@import "../pages/components/Account/AdressForm/AdressForm.scss";
+@import "../pages/components/Account/ListAddress/ListAddress.scss";
+@import "../pages/components/ListGames/ListGames.scss";
+@import "../pages/components/Pagination/Pagination.scss";
+@import "../pages/components/Games/HeaderGame/HeaderGame.scss";
+@import "../pages/components/Games/TabsGame/TabsGame.scss";
+@import "../pages/components/Games/InfoGame/InfoGame.scss";
+@import "../pages/components/Games/CarouselScreenshoots/CarouselScreenshots.scss";
