Capitulo 14 de curso Sistema de Busqueda

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,6 +9,7 @@
 @import "../pages/index.scss";
 @import "../pages/games/platform.scss";
 @import "../pages/wishlist.scss";
+@import "../pages/search.scss";
 
 //components
 @import "../pages/components/Header/Header.scss";
