Capitulo 16 del curso React

--- a/my-app/pages/components/Pagination/Pagination.scss
+++ b/my-app/pages/components/Pagination/Pagination.scss
@@ -10,7 +10,7 @@
      .item{
          background-color: $primary;
          border-radius: 50% !important;
-         color:$font-line;
+         color:$font-light;
          display:flex;
          align-items: center;
          justify-content: center;
