--- a/my-app/scss/index.scss
+++ b/my-app/scss/index.scss
@@ -8,6 +8,10 @@
 @import "../pages/account.scss";
 @import "../pages/index.scss";
 @import "../pages/games/platform.scss";
+@import "../pages/wishlist.scss";
+@import "../pages/search.scss";
+@import "../pages/cart.scss";
+
 
 //components
 @import "../pages/components/Header/Header.scss";
@@ -24,3 +28,9 @@
 @import "../pages/components/Pagination/Pagination.scss";
 @import "../pages/components/Games/HeaderGame/HeaderGame.scss";
 @import "../pages/components/Games/TabsGame/TabsGame.scss";
+@import "../pages/components/Games/InfoGame/InfoGame.scss";
+@import "../pages/components/Games/CarouselScreenshoots/CarouselScreenshots.scss";
+@import "../pages/components/Cart/SummaryCart/SummaryCart.scss";
+@import "../pages/components/Cart/AddressShipping/AddressShiping.scss";
+@import "../pages/components/Cart/Payment/Payment.scss";
+@import "../pages/components/Cart/Payment/FormPayment/FormPayment.scss";
